# Spring26Group1Project

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: patient_keywords.parquet
data/processed_data/: allergies.parquet  careplans.parquet  conditions.parquet  encounters.parquet  immunizations.parquet  medications.parquet  observations.parquet  patient_evidence.parquet  patient_evidence_verification.parquet  patient_keywords.parquet  patients.parquet  procedures.parquet
data/synthea_generated_patients/: allergies.csv  careplans.csv  claims.csv  conditions.csv  devices.csv  encounters.csv  imaging_studies.csv  immunizations.csv  medications.csv  observations.csv  organizations.csv  patients.csv  payer_transitions.csv  payers.csv  procedures.csv  providers.csv  supplies.csv
data/synthea_generated_patients_old/: allergies.csv  careplans.csv  claims.csv  devices.csv  encounters.csv  imaging_studies.csv  immunizations.csv  observations.csv  organizations.csv  patients.csv  payers.csv  procedures.csv
data/synthea_processed/: all_patients_filtered.json  queries.jsonl  synthea_processed_gpt-5-mini.json
results/: criterion_matches.parquet  eligibility_decisions.parquet  eligible_trials.parquet  evaluation_metrics_20260411_205458.json  evaluation_metrics_20260412_180322.json  manual_labels.parquet  patient_trial_rankings.parquet  qid2nctids_results_summary_synthea_k60_bm25wt1_medcptwt0_N10.json  qid2nctids_results_summary_synthea_k60_bm25wt1_medcptwt0_N2000.json  retrieval_keywords_gpt-5-mini_synthea.json
src/trial_project/: api.py  (+6 more)
(+62 files in other folders)
